# swmr_file

./: Cargo.toml
examples/: demo.rs
src/: accessor_assign.rs  file.rs  file_opt.rs  get_reader.rs  get_writer.rs  just_reader.rs  lib.rs  poll_read_state.rs  poll_state.rs  poll_write_state.rs  reader.rs  readonly_file.rs  ring_buf.rs  state_reader.rs  state_writer.rs  strategy.rs  sync_readable.rs  sync_writable.rs  task_state.rs  utils.rs  write_read_file.rs  writer.rs
src/ro/: mod.rs  poll_read_state.rs
src/rw/: mod.rs  poll_write_state.rs  rw_accessor.rs  rw_file.rs  strategy.rs
