[package]
name = "swmr_file"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
camino = "1.1.9"
futures-util = "0.3.21"
range-set-blaze = "0.3.0"
sync_file = "0.3.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io", "io-util"] }
tracing = "0.1.41"
slice-ring-buffer = "0.3.4"

[dev-dependencies]
tempfile = "3.20.0"
rand = "0.9.1"
